# wide-language-index

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  README.md  STATS.md  pyproject.toml  requirements.pip  requirements.txt
.github/workflows/: ci.yml
annotations/: schema.json
data/: rss_feeds.json
ext/: confusion.csv  confusion.json  iso-639-3.tab  language_data.json  name_index_20140320.json
index/: annotation.schema.json  sample.schema.json  schema.json
index/ace/: ace-0cd10a01f09d34dc3719d3382b23fb99.json
index/afr/: afr-06f25ab692d8d4b216c7e3f4c2d87a07.json  afr-2bb3bee04a46767f284981dd49c4c096.json  afr-412660c8a3f26ccf7fd6249ec1f0b1d0.json  afr-42a7e1e7ae21bce23b9e1f1c4b95f1f1.json  afr-4cbb1a8b5341a50502e9fbce4ef40b5d.json  afr-4f3401923a499e8d5c88af49886bb47d.json  afr-55dedd835edbdb97619bb686b70bb99c.json  afr-60218ad5697d0483c2add83a04e913e1.json  afr-7067a3160cdc7603d8c4f0916d071f66.json  afr-729a7d4750a4c24feff15d60a1a70da0.json  afr-7550db85c60c74a081561d10da12760a.json  afr-805dd79e3ea8a02bbeebc78ecd8ef405.json  afr-82e88b420744e5497c000d112d2d40ad.json  afr-87aa586dde6f45c6c4af3176c789d712.json  afr-905d221934d0092d034ce1fe15bc96b0.json  afr-907ae99a1f01d5e7f04f8fa844d0253a.json  afr-bcd0d8c61a140220ce362e36416b8025.json  afr-c51bb4d34e2307bb81072f8070cb85fd.json  afr-ccb6895c69398fb19f657727d1795a8a.json  afr-e01d39863a35ee4186650cbd35846816.json  afr-f11c9fa7d3ccb591ee3fa0b93452e7d6.json
index/aii/: aii-3ea120b079f4d0249a865b6bbe299128.json  aii-6dfd418871827607db66948970a09e4d.json  aii-83165f555f1eaf502c0a2b7a85c7c2d9.json
index/ain/: ain-3801cbd12f5079816097b937adb4da09.json  ain-5d4fc4552a62a4c0d8e98c281e8b52bc.json  ain-f29f73bf5f5f13a8bba3c8aeadfbb8d5.json
index/aln/: aln-9ea2456dada65fca3f9eb312ea53e4a0.json  aln-d10e6a46355e286c2e190acc8233e744.json  aln-d1c8d4407cc64c46e18b7d33cde53bc0.json
index/amh/: amh-006bdd1f390f84eb1c30bd95efad20d1.json  amh-00abf2bd6ff953d373210e6ecd805845.json  amh-0467dc59d04a78b1bb76fa0bd9267138.json  amh-0cdcf3445ee5d03614034b0530a6b3f1.json  amh-1b972ca08427f77da86e385e539e0500.json  amh-2610c03156b41bc8110b4f633fbd5bbe.json  amh-2d4d40907ddfece207c69ac6e4b530bb.json  amh-30e77d1d4ffd06ecc526840e732ad422.json  amh-350dbfcb533e861fc7c51d702ec56179.json  amh-3533fe596f6f1746678606eb5eccf4e2.json  (+32 more)
notebooks/: arz.ipynb  mal.ipynb  mar.ipynb  tam.ipynb  tel.ipynb  wuu.ipynb
src/: add_sample.py  annotate.py  annotate_segment.py  annotation_stats.py  audio.py  audit.py  export_languagegame.py  fetch_index.py  fetch_rss_feed.py  generate_clips.py  index.py  mirror.py  normalize.py  play_offset.py  recode_language.py  recode_sample.py  types.py  ui.py  youtube.py
(+1961 files in other folders)
