[project]
name = "wide-language-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp",
  "aiofiles",
  "pyquery",
  "sh",
  "pydub",
  "numpy",
  "requests",
  "jsonschema",
  "humanize",
  "feedparser",
  "click",
  "clint",
  "google-api-python-client",
  "characteristic",
  "python-dateutil",
  "boto3>=1.36.16",
  "python-dotenv>=1.0.1",
  "yt-dlp>=2025.1.26",
]

[dependency-groups]
dev = ["pyright>=1.1.393", "ruff>=0.9.5"]

[tool.ruff.lint]
ignore = ["E741"]
